packages/swc-plugin-workflow/transform/tests/errors/conflicting-directives/input.js
// Error: Can't have both directives in the same file
'use step';
'use workflow';

export async function test() {
  return 42;
}
